# KnotsCore

./: .gitmodules  CMakeLists.txt  PROJECT_CONTEXT.txt  README.md
src/: CMakeLists.txt
src/knotscore/: DiffPrinter.cpp  DiffPrinter.hpp  FileWalker.cpp  FileWalker.hpp  GitUtils.cpp  GitUtils.hpp  main.cpp
